[package]
name = "svg-to-png"
version = "0.1.0"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.1.0"
serde_json = "1.0.116"
resvg = "0.22.0"
usvg = "0.22.0"
tiny-skia = "0.7.0"
url = "2.2.2"

console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
