[package]
name = "svg-to-png"
version = "0.1.0"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.3.3"
serde_json = "1.0.125"
resvg = "0.22.0"
usvg = "0.22.0"
tiny-skia = "0.6.3"
url = "2.5.2"

console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
